2004-08-29  Florian Boor <florian.boor@kernelconcepts.de>

    * main.c: Don't add spaces if screen width < 260 pixels.

2004-08-24  Florian Boor <florian.boor@kernelconcepts.de>

    * event-ui.c: Select current day of week as default for weekly recurrence.

2004-08-18  Florian Boor <florian.boor@kernelconcepts.de>

    * main.c: Prevent user from accidentally creating more than on new event.
    * Released V 0.55
    * day_view.c, week_view.c, month_view.c: Removed focus changes on 
      direction key press.

2004-08-10  Florian Boor <florian.boor@kernelconcepts.de>

    * main.c: Typing opens "new event" dialog now.

2004-08-08  Florian Boor <florian.boor@kernelconcepts.de>

	* main.c: Implemented vcard import via command line switch "-i <file>"

2004-08-05  Florian Boor <florian.boor@kernelconcepts.de>

    * event-ui.c: Fixed titles, layout and positions of recurrence tab.

2004-07-23  Florian Boor <florian.boor@kernelconcepts.de>
    
    * Released V 0.54
    * added several translations to cvs
    * event_ui.c: Changes in keyboard control to use direction keys to navigate.
    * main.c: Improved handling of updates and some feedback if the "today" 
              button is active.
    * future_view.c: Added updating of date label.
    * *view.c: Some updates to day selection stuff.
    * globals.h, main.c: Added some global routines.

2004-07-22  Florian Boor <florian.boor@kernelconcepts.de>
    
    * month_view.c: Change: "today" in update routine is set to "viewtime" now.
    * *view.c, main.c: Several hacks to keep active day global and up to date.
    * event_ui.c: Multiple optical uodates and small fixes.
                  Set default focus to text field, set some window parameters.
    * main.c: Added function to set current date.
    * *view.c: Honor global setting to today.

2004-07-21  Florian Boor <florian.boor@kernelconcepts.de>

    * Makefile: Working on V 0.54 now.
    * main.c: Make default window size a little bit cleverer.